# uplift-promotions

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
configs/: default.yaml
data/processed/: cate_test.parquet  cate_val.parquet  mu0_test.npy  propensity_train_oof.npy  response_score_test.npy  test.parquet  train.parquet  val.parquet
notebooks/: 00_smoke_test.ipynb  01_eda.ipynb  02_baselines.ipynb  03_evaluation.ipynb
reports/: segment_summary.txt  writeup.md
scripts/: activate.ps1
src/uplift/: data.py  evaluation.py  forest.py  learners.py  propensity.py  splits.py  treatment.py
tests/: test_data.py  test_evaluation.py  test_forest.py  test_learners.py  test_propensity.py
